--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -7,26 +7,16 @@ header.bg-gray-500.py-5
         | With E-Dokan
 section.py-5
   .container
+    .row
+      .col-md-1
+      .col-md-10
     - if @products.empty?
       .m-2.text-center = "There is no item"
     - else
       .row
-        - @products.each do |product|
-          .col.m-5
-            .card.p-2.bg-gray-light
-              = image_tag product.image.url
-              .card-body.p-4.bg-gray-200
-                .text-center
-                  h5.fw-bolder.text-dark
-                    = product.name
-                  .d-flex.justify-content-center.small.text-white.mb-2
-                    = link_to "Details", product_details_path(product_id: product.id), method: :get, class: "text-dark"
-                  .d-flex.justify-content-center.small.text-dark.mb-2
-                    = show_price product.price
-                  .card-footer.p-4.pt-0.border-top-0.bg-transparent
-                    .text-center
-                      = link_to add_to_cart_path(product_id: product, quantity: 1), remote: true, class: "add-to-cart btn btn-default"
-                        i.fa.fa-shopping-cart
-                        span Add to cart
-
+        = render 'sliding_featured_products'
+      .row
+        = render 'sliding_top_rated_products'
+      .row
+        = render 'sliding_popular_products'
 = render 'added_to_cart_modal'
