--- a/app/views/home/product_details.html.slim
+++ b/app/views/home/product_details.html.slim
@@ -37,4 +37,7 @@
                 i class = "icon-doc icons fa fa-backward mt-0 mr-2" role="status"
                 span.spinner-border.spinner-border-sm.mr-2.d-none aria-hidden="true" role="status"
                 span = 'Back'
+      .row
+        .col-md-6
+          = render 'sliding_also_see_products'
 = render 'added_to_cart_modal'
