Caredentials are moved to credentials file from .env file

--- a/app/views/orders/index.html.slim
+++ b/app/views/orders/index.html.slim
@@ -1,8 +1,6 @@
 card#form
-  .card-header
-    .head
-      span.header-text = 'Your Orders'
-      span.card-header-actions
+  .card
+    h2.text-center = 'Your Orders'
   .card.m-0
     .card-body.p-0
       .filter-section
