--- a/app/views/orders/show.html.slim
+++ b/app/views/orders/show.html.slim
@@ -1,8 +1,6 @@
 card#form
-  .card-header
-    .head
-      span.header-text = 'Order Details'
-      span.card-header-actions
+  .card
+    h2.text-center = 'Order Details'
   .card.m-0
     .card-body.p-0
       .filter-section.ml-3.p-1
