deployment setup file changed

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,8 +14,8 @@
  *= require_self
  */
 //@import "_custom-variables";
-@import "font-awesome-sprockets";
-@import "font-awesome";
+//@import "font-awesome-sprockets";
+//@import "font-awesome";
 @import "1-frameworks";
 @import "2-layouts";
 @import "bootstrap-sprockets";
