mage size changed

--- a/app/views/home/_product_card.html.slim
+++ b/app/views/home/_product_card.html.slim
@@ -1,4 +1,4 @@
-= image_tag product.image.url
+= image_tag product.image.url, size: "250x350"
 .card-body.p-4.bg-gray-200
   .text-center
     h5.fw-bolder.text-dark
